--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="products.js"></script>
     <script src="materials.js"></script>
     <script defer src="craftparse.js"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-3KDS4M7C1F', {'anonymize_ip': true });;
+	</script>
 </head>
 <body>
     <div class="wrapper">
