--- a/index.html
+++ b/index.html
@@ -19,31 +19,25 @@
 </head>
 <body>
     <div class="wrapper">
-        <div id="manualInput" style="display:none;">
-            <!-- Levelien itemit ja Laske-nappi tulevat tänne -->
-        </div>
-        <div id="results" style="display: none;"></div>
-		
 		<!-- Materiaalien valinta -->
-		<div id="generatebychoice" style="display: none;">
-			<div id="materialsToUseLess" class="material-choices">
-				<h4>Klikkaa materiaalin kuvaa, jota haluat käyttää vähemmän:</h4>
-				<div class="materials-list"></div>
-			</div>
-
-			<div id="materialsToUseMore" class="material-choices">
-				<h4>Klikkaa materiaalin kuvaa, jota haluat käyttää enemmän:</h4>
+		<div id="generatebychoice">
+			<div id="yourMaterials" class="material-choices">
+				<h4>Your materials:</h4>
 				<div class="materials-list"></div>
 			</div>
 
 			<!-- Generoitavien itemien määrä -->
-			<div>
-				<label for="generationAmount">Generoitavien itemien määrä:</label>
-				<input type="number" id="generationAmount">
+			<div class="templateAmountWrap">
+				<label for="templateAmount">Enter number of templates</label>
+				<input type="number" id="templateAmount" placeholder="120">
 			</div>
 
-			<button id="calculateWithPreferences">Laske preferensseillä</button>
+			<button id="calculateWithPreferences">Calculate</button>
 		</div>
+        <div id="results" style="display: none;"></div>
+		<div id="manualInput" style="display:none;">
+            <!-- Levelien itemit ja Laske-nappi tulevat tänne -->
+        </div>
     </div>
         
     <footer>
