--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crafting Calculator</title>
+	<meta property="og:title" content="Crafting calculator">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://marksmangotc.github.io/crafting/">
+	<meta property="og:image" content="image.png">
+	<meta property="og:description" content="Discover a versatile tool designed to optimize your material management and production planning. This website offers an intuitive solution for handling materials, providing real-time calculations and plans that support effective decision-making and resource management">
+	<meta property="og:site_name" content="Crafting calculator">
+	<link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="products.js"></script>
     <script src="materials.js"></script>
@@ -38,6 +45,7 @@
 		<div id="manualInput" style="display:none;">
             <!-- Levelien itemit ja Laske-nappi tulevat tänne -->
         </div>
+		<div class="spinner-wrap"><div class="loading"><div class="spinner"><svg viewBox="25 25 50 50" class="circular"><circle stroke-miterlimit="10" stroke-width="3" fill="none" r="20" cy="50" cx="50" class="path"></circle></svg></div><p>Loading...</p></div></div>
     </div>
         
     <footer>
