--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="products.js"></script>
-    <script src="materials.js"></script>
+    <script src="materials.js?v=1"></script>
     <script defer src="craftparse-norm.js?v=1"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
 	<script>
