--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 	<meta property="og:description" content="Discover a versatile tool designed to optimize your material management and production planning. This website offers an intuitive solution for handling materials, providing real-time calculations and plans that support effective decision-making and resource management">
 	<meta property="og:site_name" content="Crafting calculator">
 	<link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
-    <script src="products.js"></script>
-    <script src="materials.js?v=1"></script>
-    <script defer src="craftparse-norm.js?v=1"></script>
+    <link rel="stylesheet" href="style.css?v=2">
+    <script src="products.js?v=2"></script>
+    <script src="materials.js?v=2"></script>
+    <script defer src="craftparse-norm.js?v=2"></script>
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
