--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,6 +50,7 @@
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M190.5 68.8L225.3 128l-1.3 0-72 0c-22.1 0-40-17.9-40-40s17.9-40 40-40l2.2 0c14.9 0 28.8 7.9 36.3 20.8zM64 88c0 14.4 3.5 28 9.6 40L32 128c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32l448 0c17.7 0 32-14.3 32-32l0-64c0-17.7-14.3-32-32-32l-41.6 0c6.1-12 9.6-25.6 9.6-40c0-48.6-39.4-88-88-88l-2.2 0c-31.9 0-61.5 16.9-77.7 44.4L256 85.5l-24.1-41C215.7 16.9 186.1 0 154.2 0L152 0C103.4 0 64 39.4 64 88zm336 0c0 22.1-17.9 40-40 40l-72 0-1.3 0 34.8-59.2C329.1 55.9 342.9 48 357.8 48l2.2 0c22.1 0 40 17.9 40 40zM32 288l0 176c0 26.5 21.5 48 48 48l144 0 0-224L32 288zM288 512l144 0c26.5 0 48-21.5 48-48l0-176-192 0 0 224z"/></svg>
 				</button>
 			</div>
+			<h1 class="calc-header">Noox Calculator</h1>
                         <div class="section-title"><div class="checkbox-header"><span>Scale</span><button id="scaleInfoBtn" class="info-btn" aria-label="Scale info">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
                                 </button></div></div>
@@ -230,26 +233,27 @@
 				<div id="donate-button"></div>
 				<script src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8"></script>
 				<script>
-				PayPal.Donation.Button({
-				env:'production',
-				hosted_button_id:'NSF868HN3KUXJ',
-				image: {
-				src:'https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif',
-				alt:'Donate with PayPal button',
-				title:'PayPal - The safer, easier way to pay online!',
-				}
-				}).render('#donate-button');
+					PayPal.Donation.Button({
+					env:'production',
+					hosted_button_id:'APCL7TP42VH58',
+					image: {
+					src:'https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif',
+					alt:'Donate with PayPal button',
+					title:'PayPal - The safer, easier way to pay online!',
+					}
+					}).render('#donate-button');
 				</script>
+				
 			</div>
 		</div>
 		<div class="spinner-wrap"><div class="loading"><div class="spinner"><svg viewBox="25 25 50 50" class="circular"><circle stroke-miterlimit="10" stroke-width="3" fill="none" r="20" cy="50" cx="50" class="path"></circle></svg></div><p>Loading...</p></div></div>
     </div>
         
     <footer>
-		<div>
-			<p>Made by; Mark N Killer</p><p>Discord: @Nooxel</p>
-			<!--<p class="cookie-settings"><span id="changeCookieSettings">Change Cookie Settings</span></p>-->
-		</div>
+                <div>
+                        <p class="made-by">Development ideas and feedback on Discord: <span>@Nooxel</span></p>
+                        <!--<p class="cookie-settings"><span id="changeCookieSettings">Change Cookie Settings</span></p>-->
+                </div>
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M190.5 68.8L225.3 128l-1.3 0-72 0c-22.1 0-40-17.9-40-40s17.9-40 40-40l2.2 0c14.9 0 28.8 7.9 36.3 20.8zM64 88c0 14.4 3.5 28 9.6 40L32 128c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32l448 0c17.7 0 32-14.3 32-32l0-64c0-17.7-14.3-32-32-32l-41.6 0c6.1-12 9.6-25.6 9.6-40c0-48.6-39.4-88-88-88l-2.2 0c-31.9 0-61.5 16.9-77.7 44.4L256 85.5l-24.1-41C215.7 16.9 186.1 0 154.2 0L152 0C103.4 0 64 39.4 64 88zm336 0c0 22.1-17.9 40-40 40l-72 0-1.3 0 34.8-59.2C329.1 55.9 342.9 48 357.8 48l2.2 0c22.1 0 40 17.9 40 40zM32 288l0 176c0 26.5 21.5 48 48 48l144 0 0-224L32 288zM288 512l144 0c26.5 0 48-21.5 48-48l0-176-192 0 0 224z"/></svg>
 	</footer>
 </body>
