--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,9 +27,9 @@
 	<script src="seasons/season12.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
-    <script defer src="craftparse.js?v=1.111"></script>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
-	<script>
+    <script defer src="craftparse.js?v=1.113"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
+    <script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
@@ -60,7 +59,10 @@
                         </select>
 
                         <div id="yourMaterials" class="material-choices">
-                                <div class="section-title"><div class="checkbox-header"><span>Your materials</span></div></div>
+                                <div class="section-title"><div class="checkbox-header"><span>Your materials</span><button id="yourMaterialsInfoBtn" class="info-btn" aria-label="Your materials info">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
+                                </button></div></div>
+                                <div id="yourMaterialsInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"/></svg></button><p>Enter the total amount of each material at <b>Poor</b> quality. If your inventory is in higher tiers, downgrade them in-game and use the resulting Poor total here. This ensures the calculator matches the expected material scale.</p></div></div>
                                 <div class="materials-list">
 					<div class="my-material black-iron"><img src="materials/icon_crafting_blackiron.webp"><div><span>Black Iron</span><input type="text" class="numeric-input" id="my-black-iron" name="my-black-iron" placeholder="value" pattern="[0-9]*" inputmode="numeric"></div></div>
 					<div class="my-material copper-bar"><img src="materials/icon_crafting_copper_bar.webp"><div><span>Copper bar</span><input type="text" class="numeric-input" id="my-copper-bar" name="my-copper-bar" placeholder="value" pattern="[0-9]*" inputmode="numeric"></div></div>
@@ -153,34 +155,98 @@
 					<option value="legendary">Legendary</option>
 				</select>
 			</div>
-			<div class="leveltmp25">
-				<div class="templateAmountWrap">
-					<label for="templateAmount25">level 25</label>
-					<input type="number" id="templateAmount25" placeholder="120" min="0">
-				</div>
-				<select name="temp25" id="temp25" class="temps">
-					<option value="poor">Poor</option>
-					<option value="common">Common</option>
-					<option value="fine">Fine</option>
-					<option value="exquisite" selected>Exquisite</option>
-					<option value="epic">Epic</option>
-					<option value="legendary">Legendary</option>
-				</select>
-			</div>
+                        <div class="leveltmp25">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount25">level 25</label>
+                                        <input type="number" id="templateAmount25" placeholder="120" min="0">
+                                </div>
+                                <select name="temp25" id="temp25" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine">Fine</option>
+                                        <option value="exquisite" selected>Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp30">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount30">level 30</label>
+                                        <input type="number" id="templateAmount30" placeholder="120" min="0">
+                                </div>
+                                <select name="temp30" id="temp30" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine" selected>Fine</option>
+                                        <option value="exquisite">Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp35">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount35">level 35</label>
+                                        <input type="number" id="templateAmount35" placeholder="120" min="0">
+                                </div>
+                                <select name="temp35" id="temp35" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine" selected>Fine</option>
+                                        <option value="exquisite">Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp40">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount40">level 40</label>
+                                        <input type="number" id="templateAmount40" placeholder="120" min="0">
+                                </div>
+                                <select name="temp40" id="temp40" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common">Common</option>
+                                        <option value="fine" selected>Fine</option>
+                                        <option value="exquisite">Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
+                        <div class="leveltmp45">
+                                <div class="templateAmountWrap">
+                                        <label for="templateAmount45">level 45</label>
+                                        <input type="number" id="templateAmount45" placeholder="120" min="0">
+                                </div>
+                                <select name="temp45" id="temp45" class="temps">
+                                        <option value="poor">Poor</option>
+                                        <option value="common" selected>Common</option>
+                                        <option value="fine">Fine</option>
+                                        <option value="exquisite">Exquisite</option>
+                                        <option value="epic">Epic</option>
+                                        <option value="legendary">Legendary</option>
+                                </select>
+                        </div>
 			
                         <div class="section-title"><div class="checkbox-header"><span>Ceremonial Targaryen Warlord</span><button id="ctwInfoBtn" class="info-btn" aria-label="CTW info">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
                         </button></div></div>
                         <div id="ctwInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-					<path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-				</svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targ items. This is more material-efficient as these items are cheaper to produce.<br><br>
-			<b>Use when needed</b>: Ceremonial Targaryen Warlord items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
+                                        <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
+                                </svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targaryen Warlord items. This is more material-efficient as these items are cheaper to produce.<br><br>
+                        <b>Only for Level 20</b>: Level 20 templates will exclusively use Ceremonial Targaryen Warlord items, ensuring the CTW set is crafted even when other warlord options are unavailable.<br><br>
+                        <b>Use when needed</b>: Ceremonial Targaryen Warlord items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="level1OnlyWarlords" checked>
                                 <svg><use xlink:href="#checkbox-30"></use></svg>
                             </span>
                             <label for="level1OnlyWarlords">Only for Level 1</label>
+                        </div>
+                        <div class="warlord-toggle checkbox-wrapper-30">
+                            <span class="checkbox">
+                                <input type="checkbox" id="level20OnlyWarlords" checked>
+                                <svg><use xlink:href="#checkbox-30"></use></svg>
+                            </span>
+                            <label for="level20OnlyWarlords">Only for Level 20</label>
                         </div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
@@ -193,8 +259,8 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
                         </button></div></div>
                         <div id="oddsInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-					<path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds are always active, while medium and low odds can be toggled on or off. Odds apply to Season 0 and Ceremonial Targaryen Warlord items at levels 15, 20, and 25. Season 1 and Season 2 items are affected only at level 20.</p></div></div>
+                                        <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
+                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds are always active, while medium and low odds can be toggled on or off. Odds apply to Season 0 and Ceremonial Targaryen Warlord items at levels 15, 20, 25, and 35. Season 1 and Season 2 items are affected only at level 20.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="includeLowOdds">
