--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                         </button></div></div>
                         <div id="ctwInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                         <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-                                </svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targaryen Warlord items. This is more material-efficient as these items are cheaper to produce.<br><br>
-                        <b>Only for Level 20</b>: Level 20 templates will exclusively use Ceremonial Targaryen Warlord items, ensuring the CTW set is crafted even when other warlord options are unavailable.<br><br>
+                               </svg></button><p><b>Only for Level 1</b>: Level 1 templates will exclusively use Ceremonial Targaryen Warlord items. This is more material-efficient as these items are cheaper to produce.<br><br>
+                        <b>Only for Level 20</b>: Level 20 templates will exclusively use Ceremonial Targaryen Warlord items, ensuring the Ceremonial Targaryen Warlord set is crafted even when other warlord options are unavailable.<br><br>
                         <b>Use when needed</b>: Ceremonial Targaryen Warlord items can be used at any level when material constraints make it beneficial. This does not force their use, but allows it as needed.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
@@ -260,7 +260,7 @@
                         </button></div></div>
                         <div id="oddsInfoPopup" class="info-overlay"><div class="info-content"><button class="close-popup" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
                                         <path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"></path>
-                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds are always active, while medium and low odds can be toggled on or off. Odds apply to Season 0 and Ceremonial Targaryen Warlord items at levels 15, 20, 25, and 35. Season 1 and Season 2 items are affected only at level 20.</p></div></div>
+                               </svg></button><p><b>Odds</b>: Items are grouped into three tiers. Normal odds stay active, while medium and low odds can be toggled on or off. Season 0 gear and Ceremonial Targaryen Warlord pieces respond to these toggles wherever odds apply (level 20 CTW requires the medium toggle), while Season 1 and Season 2 gear only react at level 20.</p></div></div>
                         <div class="warlord-toggle checkbox-wrapper-30">
                             <span class="checkbox">
                                 <input type="checkbox" id="includeLowOdds">
@@ -274,6 +274,43 @@
                                 <svg><use xlink:href="#checkbox-30"></use></svg>
                             </span>
                             <label for="includeMediumOdds">Include medium odds items</label>
+                        </div>
+                        <div class="season-zero-section">
+                            <div class="section-title">
+                                <div class="checkbox-header">
+                                    <span>Season 0 weighting</span>
+                                    <button id="seasonZeroInfoBtn" class="info-btn" aria-label="Season 0 weighting info">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336c-13.3 0-24 10.7-24 24s10.7 24 24 24l80 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-8 0 0-88c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l24 0 0 64-24 0zm40-144a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"/></svg>
+                                    </button>
+                                </div>
+                            </div>
+                            <div id="seasonZeroInfoPopup" class="info-overlay">
+                                <div class="info-content">
+                                    <button class="close-popup" aria-label="Close">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"/></svg>
+                                    </button>
+                                    <p>Use the slider to fine-tune how much the calculator favours Season 0 items. Off removes them, Low gently reduces their priority, Normal keeps the default balance, and High heavily prioritises Season 0 over other seasons.</p>
+                                </div>
+                            </div>
+                            <div class="season-zero-slider">
+                                <input
+                                    type="range"
+                                    min="0"
+                                    max="3"
+                                    step="1"
+                                    value="2"
+                                    id="seasonZeroPriority"
+                                    class="season-zero-slider__input"
+                                    aria-label="Season 0 weighting"
+                                    aria-describedby="seasonZeroPriorityLabels"
+                                >
+                                <div class="season-zero-slider__labels" id="seasonZeroPriorityLabels">
+                                    <span>Off</span>
+                                    <span>Low</span>
+                                    <span>Normal</span>
+                                    <span>High</span>
+                                </div>
+                            </div>
                         </div>
                         <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
                             <symbol id="checkbox-30" viewBox="0 0 22 22">
@@ -313,7 +350,17 @@
 				</script>
 			</div>
 		</div>
-		<div class="spinner-wrap"><div class="loading"><div class="spinner"><svg viewBox="25 25 50 50" class="circular"><circle stroke-miterlimit="10" stroke-width="3" fill="none" r="20" cy="50" cx="50" class="path"></circle></svg></div><p>Loading...</p></div></div>
+            <div class="spinner-wrap">
+                    <div class="loading">
+                            <p class="loading-message">Preparing calculations…</p>
+                            <div class="spinner-progress" aria-live="polite">
+                                    <div class="spinner-progress__track" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
+                                            <div class="spinner-progress__bar"></div>
+                                    </div>
+                                    <span class="spinner-progress__label">Preparing templates…</span>
+                            </div>
+                    </div>
+            </div>
     </div>
         
     <footer>
