--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta property="og:description" content="Discover a versatile tool designed to optimize your material management and production planning. This website offers an intuitive solution for handling materials, providing real-time calculations and plans that support effective decision-making and resource management">
 	<meta property="og:site_name" content="Crafting calculator">
 	<link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css?v=2">
+    <link rel="stylesheet" href="style.css?v=1.115">
 	<script src="seasons/season0.js"></script>
 	<script src="seasons/season1.js"></script>
         <script src="seasons/season2.js"></script>
@@ -28,7 +28,7 @@
 	<script src="seasons/season12.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
-    <script defer src="craftparse.js?v=2.001"></script>
+    <script defer src="craftparse.js?v=1.113"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
     <script>
 	  window.dataLayer = window.dataLayer || [];
@@ -54,12 +54,34 @@
                                 <button class="close-popup" type="button" aria-label="Close update log">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M345 137c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-119 119L73 103c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l119 119L39 375c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l119-119L311 409c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-119-119L345 137z"/></svg>
                                 </button>
-                                <h2 id="updateLogTitle">What&rsquo;s new &ndash; 10/04/2025</h2>
-                                <ul>
-                                        <li><strong>Levels 30&ndash;45 coverage:</strong> You can now prepare high-level templates without leaving the calculator, making late-game planning effortless.</li>
-                                        <li><strong>Season 0 weighting control:</strong> Choose how much influence Season 0 items have in the recommendations with an intuitive slider.</li>
-                                        <li><strong>Enhanced calculation algorithm:</strong> Behind-the-scenes logic improvements make the planner handle the expanded dataset more reliably.</li>
-                                </ul>
+                                <h2 id="updateLogTitle">What&rsquo;s new</h2>
+                                <div class="changelog-entries">
+                                        <div class="changelog-entry">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-06-10" aria-expanded="true" aria-controls="changelog-panel-2025-06-10">
+                                                        <span class="changelog-date">10/06/2025</span>
+                                                        <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
+                                                </button>
+                                                <div id="changelog-panel-2025-06-10" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-06-10">
+                                                        <ul>
+                                                                <li><strong>Frostfang Thenn items:</strong> Added the full equipment lineup to planning calculations.</li>
+                                                                <li><strong>Level 40 fixed:</strong> Medium items are now excluded from calculations unless explicitly selected.</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
+                                        <div class="changelog-entry">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-04-10" aria-expanded="false" aria-controls="changelog-panel-2025-04-10">
+                                                        <span class="changelog-date">10/04/2025</span>
+                                                        <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
+                                                </button>
+                                                <div id="changelog-panel-2025-04-10" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-04-10">
+                                                        <ul>
+                                                                <li><strong>Levels 30&ndash;45 coverage:</strong> You can now prepare high-level templates without leaving the calculator, making late-game planning effortless.</li>
+                                                                <li><strong>Season 0 weighting control:</strong> Choose how much influence Season 0 items have in the recommendations with an intuitive slider.</li>
+                                                                <li><strong>Enhanced calculation algorithm:</strong> Behind-the-scenes logic improvements make the planner handle the expanded dataset more reliably.</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
+                                </div>
                         </div>
                 </div>
 			<div class="donate-header">
@@ -392,8 +414,3 @@
 	</footer>
 </body>
 </html>
-
-
-
-
-
