--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
 	<meta property="og:description" content="Discover a versatile tool designed to optimize your material management and production planning. This website offers an intuitive solution for handling materials, providing real-time calculations and plans that support effective decision-making and resource management">
 	<meta property="og:site_name" content="Crafting calculator">
 	<link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="style.css?v=1.115">
-	<script src="seasons/season0.js"></script>
+    <link rel="stylesheet" href="style.css?v=1.117">
+        <script>
+                (function () {
+                        const params = new URLSearchParams(window.location.search);
+                        if (params.get('debug') !== 'true') {
+                                const noop = () => {};
+                                console.log = noop;
+                        }
+                })();
+        </script>
+        <script src="seasons/season0.js"></script>
 	<script src="seasons/season1.js"></script>
         <script src="seasons/season2.js"></script>
         <script src="seasons/season3.js"></script>
@@ -28,7 +37,7 @@
 	<script src="seasons/season12.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
-    <script defer src="craftparse.js?v=1.113"></script>
+    <script defer src="craftparse.js?v=1.116"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3KDS4M7C1F"></script>
     <script>
 	  window.dataLayer = window.dataLayer || [];
@@ -57,7 +66,19 @@
                                 <h2 id="updateLogTitle">What&rsquo;s new</h2>
                                 <div class="changelog-entries">
                                         <div class="changelog-entry">
-                                                <button class="changelog-toggle" id="changelog-toggle-2025-06-10" aria-expanded="true" aria-controls="changelog-panel-2025-06-10">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-10-22" aria-expanded="true" aria-controls="changelog-panel-2025-10-22">
+                                                        <span class="changelog-date">22/10/2025</span>
+                                                        <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
+                                                </button>
+                                                <div id="changelog-panel-2025-10-22" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-10-22">
+                                                        <ul>
+                                                                <li><strong>Faster calculations:</strong> The computation pipeline is streamlined so results appear more quickly.</li>
+                                                                <li><strong>Save your work:</strong> Added the option to store the current calculation locally for easy continuation later.</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
+                                        <div class="changelog-entry">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-06-10" aria-expanded="false" aria-controls="changelog-panel-2025-06-10">
                                                         <span class="changelog-date">10/06/2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
@@ -414,4 +435,3 @@
 	</footer>
 </body>
 </html>
-
