--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<script src="seasons/season10.js"></script>
 	<script src="seasons/season11.js"></script>
 	<script src="seasons/season12.js"></script>
+	<script src="seasons/season13.js"></script>
     <script src="products.js"></script>
     <script src="materials.js"></script>
     <script defer src="craftparse.js?v=1.116"></script>
@@ -66,7 +67,18 @@
                                 <h2 id="updateLogTitle">What&rsquo;s new</h2>
                                 <div class="changelog-entries">
 									<div class="changelog-entry">
-                                                <button class="changelog-toggle" id="changelog-toggle-2025-12-25" aria-expanded="true" aria-controls="changelog-panel-2025-12-25">
+                                                <button class="changelog-toggle" id="changelog-toggle-2026-01-05" aria-expanded="true" aria-controls="changelog-panel-2026-01-05">
+                                                        <span class="changelog-date">05/01/2026</span>
+                                                        <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
+                                                </button>
+                                                <div id="changelog-panel-2026-01-05" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2026-01-05">
+                                                        <ul>
+                                                                <li><strong>Valorous Kingsguard items:</strong> Added the full equipment lineup to planning calculations.</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
+									<div class="changelog-entry">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-12-25" aria-expanded="false" aria-controls="changelog-panel-2025-12-25">
                                                         <span class="changelog-date">25/12/2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
