Level include slider fix

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                                 <div class="dual-range-fill" id="useAllLevelRangeFill"></div>
                                 <input type="range" id="useAllLevelFrom" min="0" max="9" value="0" class="dual-range-thumb dual-range-low" aria-label="First level">
                                 <input type="range" id="useAllLevelTo" min="0" max="9" value="9" class="dual-range-thumb dual-range-high" aria-label="Last level">
+                                <div id="useAllLevelRangeTouchOverlay" class="dual-range-touch-overlay" aria-hidden="true"></div>
                             </div>
                             <output id="useAllLevelRangeLabel" class="use-all-level-range-label">Levels included 1 – 45</output>
                         </div>
