Season 0 painotuksen parantelu fluxien jäljiltä, ja visu juttuja

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                                 <div id="changelog-panel-2026-02-02" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2026-02-02">
                                                         <ul>
                                                                 <li><strong>Laughing Baratheon items:</strong> Added the full equipment lineup to planning calculations.</li>
-                                                                <li><strong>Season flux in calculations:</strong> You can now use season flux as a wildcard for that season&rsquo;s gear materials when planning. Each season&rsquo;s flux covers deficits for items of the same season.</li>
+                                                                <li><strong>Season flux in calculations:</strong> You can now use season flux as a wildcard for that season&rsquo;s gear materials when planning.</li>
                                                         </ul>
                                                 </div>
                                         </div>
